# garnet

./: .build.yml  .builds.yml  .hgignore  Cargo.toml  README.md  TODO.md  coverage.sh
benches/: basic.rs
doc/: ABI.md  grammar.ebnf  syntax.md  types.md
fml/: Cargo.toml  thing.gt
fml/src/: ast.rs  lib.rs  main.rs  parser.rs  typeck.rs
fml/tests/: main.rs  test1.gt  test2.gt  test_failure.gt  test_forever1.gt  test_forever2.gt  test_lambda1.gt  test_lambda2.gt  test_lambda3.gt  test_lambda4.gt  test_lambda5.gt  test_let1.gt  test_module1.gt  test_module2.gt  test_module3.gt  test_module4.gt  test_module5.gt  test_module_specialization1.gt  test_struct1.gt  test_struct2.gt  test_struct3.gt  test_struct4.gt  test_struct5.gt  test_struct6.gt  test_struct7.gt  test_tuple1.gt  test_tuple2.gt  test_tuple3.gt  test_tuple4.gt  test_typedef1.gt  test_typedef2.gt  test_typedef3.gt  test_typedef4.gt  test_typedef5.gt  test_typedef5_failure.gt  test_typedef6.gt  test_typedef7.gt  test_typedef8.gt  test_unnamed_failure1.gt  test_unnamed_failure2.gt  (+2 more)
fml/tests/programs/: test1.gt  test2.gt  test_array1.gt  test_array2.gt  test_array3.gt  test_enum1.gt  test_failure.gt  test_forever1.gt  test_forever2.gt  test_lambda1.gt  test_lambda2.gt  test_lambda3.gt  test_lambda4.gt  test_lambda5.gt  test_let1.gt  test_module1.gt  test_module2.gt  test_module3.gt  test_module4.gt  test_module5.gt  test_module6.gt  test_module7.gt  test_module_specialization1.gt  test_struct1.gt  test_struct2.gt  test_struct3.gt  test_struct4.gt  test_struct5.gt  test_struct6.gt  test_struct7.gt  test_sum1.gt  test_sum2.gt  test_tuple1.gt  test_tuple2.gt  test_tuple3.gt  test_tuple4.gt  test_typedef1.gt  test_typedef2.gt  test_typedef3.gt  test_typedef4.gt  (+9 more)
gt/: README.md  fib.gt  hash_module_tinkering.gt  hashtbl.gt  hello.gt  leb128.gt  module_tinkering.gt  vec.gt  vectors.gt
heck/: build.sh  tychk.ml
misc/: garnet.vim
src/: ast.rs  backend.rs  borrowck.rs  builtins.rs  format.rs  hir.rs  hir2.rs  ir.rs  (+14 more)
(+166 files in other folders)
