[package]
name = "garnet"
version = "0.1.0"
authors = ["Simon Heath <icefox@dreamquest.io>"]
edition = "2018"


[[test]]
name = "endtoend"
path = "tests/endtoend.rs"
harness = false

[[test]]
name = "blns"
path = "tests/blns.rs"

[[bench]]
name = "basic"
harness = false

[dependencies]
argh = "0.1"
codespan-reporting = "0.11"
once_cell = "1"
logos = "0.12"


[dev-dependencies]
# Use wasmtime to evaluate results of end-to-end tests.
#wasmtime = "0.16"
#wasmprinter = "0.2"
tempfile = "3"
#libloading = "0.7"
lang_tester = "0.7"
criterion = "0.3"
