[package]
name = "garnet"
version = "0.1.0"
authors = ["Simon Heath <icefox@dreamquest.io>"]
edition = "2018"
license = "LGPL-3.0-only"
default-run = "garnetc"


[[test]]
name = "endtoend"
path = "tests/endtoend.rs"
harness = false

[[test]]
name = "blns"
path = "tests/blns.rs"

[[bench]]
name = "basic"
harness = false

[dependencies]
argh = "0.1"
codespan-reporting = "0.11"
once_cell = "1"
logos = "0.12"
log = "0.4"
pretty_env_logger = "0.4"


[dev-dependencies]
tempfile = "3"
lang_tester = "0.7"
criterion = "0.4"
